[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://FatiguePhysical2.gd" type="Script" id=2]

[node name="FatiguePhysical2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 712.0
margin_bottom = 562.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question6" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 333.0
margin_bottom = 14.0
text = "Are you lacking in energy?"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 333.0
margin_bottom = 34.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider6" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 38.0
margin_right = 333.0
margin_bottom = 69.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 81.0
margin_right = 81.0
margin_bottom = 31.0

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 85.0
margin_right = 158.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 162.0
margin_right = 250.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 254.0
margin_right = 326.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question7" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 73.0
margin_right = 333.0
margin_bottom = 87.0
text = "Do you have less strength in your muscles?"

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 91.0
margin_right = 333.0
margin_bottom = 107.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider7" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 111.0
margin_right = 333.0
margin_bottom = 142.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 81.0
margin_right = 81.0
margin_bottom = 31.0

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 85.0
margin_right = 158.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 162.0
margin_right = 250.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 254.0
margin_right = 326.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="Question8" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 146.0
margin_right = 333.0
margin_bottom = 160.0
text = "Do you feel weak?"

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 164.0
margin_right = 333.0
margin_bottom = 180.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_right = 25.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HSlider8" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 29.0
margin_right = 304.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 308.0
margin_right = 333.0
margin_bottom = 16.0
rect_min_size = Vector2( 25, 0 )

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 184.0
margin_right = 333.0
margin_bottom = 215.0

[node name="MuchWorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_right = 77.0
margin_bottom = 31.0
text = "Much worse
than usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 81.0
margin_right = 81.0
margin_bottom = 31.0

[node name="WorsethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 85.0
margin_right = 158.0
margin_bottom = 31.0
text = "Worse than
usual"
align = 1

[node name="NomorethanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 162.0
margin_right = 250.0
margin_bottom = 31.0
text = "No more than
usual"
align = 1

[node name="BetterthanUsual" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 254.0
margin_right = 326.0
margin_bottom = 31.0
text = "Better than
usual"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 219.0
margin_right = 333.0
margin_bottom = 319.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer7" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 323.0
margin_right = 333.0
margin_bottom = 343.0
alignment = 1

[node name="BackButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 96.0
margin_right = 138.0
margin_bottom = 20.0
text = "Back"

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 142.0
margin_right = 184.0
margin_bottom = 20.0
text = "Next"

[node name="MenuButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer7"]
margin_left = 188.0
margin_right = 236.0
margin_bottom = 20.0
text = "Menu"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 140.0
rect_min_size = Vector2( 330, 140 )
resizable = true
dialog_text = "Are you sure you want to exit? Your current responses will not be saved."
dialog_autowrap = true
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer/HSlider6" to="." method="_on_HSlider6_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/HSlider7" to="." method="_on_HSlider7_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer5/HSlider8" to="." method="_on_HSlider8_value_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer7/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/HBoxContainer7/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer7/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="confirmed" from="NinePatchRect/VBoxContainer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
